--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Country search engine</h1>
-		<button id="search">Search a country</button>
-		<input id="country-name" type="text">
-		<h2>List of countries</h2>
-		<ul id="countries">
-			<li>No data</li>
-		</ul>
+		<div class="text">
+			<h1>Country search engine</h1>
+			<input id="country-name" type="text" placeholder="Country name...">
+			<button id="search">Search a country</button>
+			<h2>List of countries</h2>
+			<ul id="countries">
+				<li>No data</li>
+			</ul>
+		</div>
 	</div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
