--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="container">
-		<div class="text">
+	<div class="container row">
+		<div class="text col-6 col-s-12">
 			<h1>Country search engine</h1>
-			<input id="country-name" type="text" placeholder="Country name...">
+			<p>Please type a letter or several letters and the app will find for you countries names, which contains this letter\letters.</p>
+			<input id="country-name" type="text" placeholder="Type letter/letters...">
 			<button id="search">Search a country</button>
 			<h2>List of countries</h2>
 			<ul id="countries">
 				<li>No data</li>
 			</ul>
+		</div>
+		<div class="photo col-6 col-s-12">	
+			<img src="img/map.png" alt="photo">
 		</div>
 	</div>
 
