--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<div class="container row">
 		<div class="text col-6 col-s-12">
 			<h1>Country search engine</h1>
-			<p>Please type a letter or several letters and the app will find for you countries names, which contains this letter\letters.</p>
-			<input id="country-name" type="text" placeholder="Type letter/letters...">
-			<button id="search">Search a country</button>
-			<h2>List of countries</h2>
+			<p>Please type one of the regions: Africa, Americas, Asia, Europe, Oceania</p>
+			<input id="region-name" type="text" placeholder="Type here...">
+			<button id="search">Search countries</button>
+			<h2>List of countries:</h2>
 			<ul id="countries">
 				<li>No data</li>
 			</ul>
