--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="container row">
 		<div class="text col-6 col-s-12">
 			<h1>Country search engine</h1>
-			<p>Please type one of the regions: Africa, Americas, Asia, Europe, Oceania</p>
+			<p>Please type the name of one of the regions: Africa, Americas, Asia, Europe, Oceania</p>
 			<input id="region-name" type="text" placeholder="Type here...">
 			<button id="search">Search countries</button>
 			<h2>List of countries:</h2>
